# note : each note will be start with "note :"
# note : 1 note by subject

[3.7.7]
    - fix XSS issue in comments
    - fix issue when view a svg file in the file manager, #339
    - fix Error on file page after file deletion #327
    - fix "Reply" not parsed (comments) #323
    - fix Error on addon compliancy version #330
    - fix bug on new line in feeds title
    - upd note on installation (EN lang) #324

[3.7.6]
    note : issue #318, thanks to @chb9
    - fix XSS issue in comments

[3.7.5]
    - fix feed aggregator multiple errors on pages navigation
    - fix feed aggregator filter for 4 bytes char
    - fix admin settings page, wrong behavior for themes listing

[3.7.4]
    - fix wrong behavior on link (title) from feed aggregator
    - fix for PHP 5.5 compat

[3.7.3]
    note : This update is about bug fix, no need to update if 3.7.1 already installed and ok
    - add support for php without the PHP intl extension
    - fix feed aggregator

[3.7.2]
    note : This update is about bug fix, no need to update if 3.7.1 already installed and ok
    note : A bug with the feed aggregator is known, we are working on it, new update will go live soon!
    - upd install and update to add intl test and message
    - upd boot to add intl test and message

[3.7.1]
    note : This update is about bug fix
    - fix function return_byte(), format the value before math
    - fix errors with (int) when PHP_INT_MAX is too low

[3.7]
    note : This changelog file will not be complete due to the consequent number of changes and the
           late implementation of this changelog
    note : The 3.7 is the first release after the change of maintainer
    note : GitHub moved to https://github.com/BoboTiG/blogotext/
    note : GitHub moved to https://github.com/BlogoText/blogotext/
    note : you will notice some performance improvement due to the partial rewrite/reorder of the core