@@ -15,6 +15,8 @@
     - fix "Reply" not parsed (comments) #323
     - fix Error on addon compliancy version #330
     - fix bug on new line in feeds title
+    - fix potential use of addon tag in comments, title, description ... #363
+    - fix feed.php, remove all cache #362
     - upd note on installation (EN lang) #324
 
 [3.7.6]
